# finance-app

./: .dockerignore  .env.example  .gitignore  README.md
.github/: pull_request_template.md
.github/tooling/: pr-title-checker.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3fe24890dc46_feat_user_initial_schemas_for_mvp.py  78e9d5866752_create_refresh_token_table.py  d91c3a29edef_json_change_to_support_different_db.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  openapi.py  security.py  security_http.py
apps/api/app/db/: base.py  session.py
apps/api/app/exceptions/: auth.py  base.py  user.py
apps/api/app/models/: account.py  category.py  refresh_token.py  transaction.py  user.py
apps/api/app/models/mixin/: timestamp.py
apps/api/app/routers/: auth.py  user.py
apps/api/app/schemas/: auth.py  errors.py  timeStamp.py  user.py
apps/api/app/services/: auth.py  refresh_tokens.py  user.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_auth.py  test_users.py  test_users_protected.py
apps/api/tests/core/: test_deps.py
apps/api/tests/db/: test_base_imports.py
apps/api/tests/domain/: test_user_errors.py
apps/api/tests/security/: test_body_limit.py  test_cors.py  test_origin_enforcement.py  test_security_headers.py  test_trusted_host.py
apps/api/tests/services/: test_refresh_token_service.py  test_user_service.py
bruno-collection-finance-app/: bruno.json  collection.bru
docs/: pr-contract.md
infra/: Dockerfile.api  dev-entrypoint.sh  docker-compose.yml
(+22 files in other folders)
